# tiny_python_projects

./: .gitignore  pyproject.toml
01_hello/: hello.py
02_crowsnest/: crowsnest.py
03_picnic/: picnic.py
04_jump_the_five/: jump.py
05_howler/: howler.py
